# ML-Project-Ragebait

./: .gitignore  README.md  README_iteration1_legacy.md  pyproject.toml
configs/: bert_32k.yaml  bert_32k_tuned.yaml  default.yaml
deliverables/: final_4_speaker_script.md  final_audience_qna.md  final_report.tex  final_slides.html  final_speaker_notes.md  revision_rationale.md
docs/: ML-Ragebait-Detection-Draft_2.pptx  annotation_guidelines.md  build_ragebait_presentation.py  example_report_2.md  example_slides_1.md  example_slides_2.md  experiment_roadmap.md  experiment_roadmap_01.md  final_report.md  iteration1_report.md  ragebait_detection_presentation.pptx  ragebait_detection_presentation_outline.md  report_draft.md  report_template.md  slides_draft.md
iteration2/: README.md  requirements.txt
legacy_iteration1_configs/: default.yaml  smoke.yaml
legacy_iteration1_manual_eval_app/: .gitignore  README.md
legacy_iteration1_ragebait_detector/: evaluation.py  inference.py  pipeline.py
legacy_iteration1_scripts/: analyze_labeled_csv.py  balance_labeled_csv.py  compress_labeled_csv.py  run_pipeline.py  test_trained_bert.py
manual_eval_app/: __init__.py
outputs/: _test_vllm_labeler_input.csv  _test_vllm_labeler_output.csv  _test_vllm_labeler_summary.json  _test_vllm_random_input.csv  _test_vllm_random_output.csv  _test_vllm_random_summary.json  ollama_labeling_summary.json  ollama_smoke_summary.json  preprocess_summary.json  vllm_labeling_summary.json
ragebait_detector/: __init__.py  config.py  evaluation.py  inference.py  pipeline.py
(+154 files in other folders)
